Fixed about me on mobile

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -129,10 +129,9 @@
 @media screen and (max-width: 1200px) {
 
 
-
   .about-page {
     width: 100%;
-    padding-bottom: 60px;
+    padding-bottom: 100px;
 
   }
   .stage-cube-cont {
@@ -150,7 +149,9 @@
 
 .prog-cont {
   width: 100%;
+  height: 120px;
   margin-bottom: 20px;
+  margin-top: -10px;
 
   img {
     width: 34px;
